# notifications_app

./: docker-compose.yml  manage.py  pyproject.toml
apps/mailing/: models.py  tasks.py  views.py
apps/mailing/migrations/: 0001_initial.py
apps/user/: models.py  tasks.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
backend/: celery.py  settings.py  urls.py
backend/settings/: base.py  dev.py
notification_app/: asgi.py  urls.py  wsgi.py
notification_app/settings/: base.py  dev.py
