[tool.poetry]
name = "notifications-app"
version = "0.1.0"
description = ""
authors = ["neytirri <129419810+neytirri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
argon2-cffi = "^23.1.0"
psycopg2-binary = "^2.9.9"
django-redis-sessions = "^0.6.2"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
